<resources>
    <string name="app_name">Listopia</string>
    <string name="server_client_id">479114592644-jilkbsr5flkcumgn0uvcnslsduli2t8o.apps.googleusercontent.com</string>
    
    <string name="nav_drawer_header_sign_in">Sign In or Sign Up</string>
    <string name="nav_drawer_header_sync">To Sync in browser and share your lists</string>
    <string name="toolbar_shopping_list">My Lists</string>
    <string name="toolbar_shopping_list_add">Adding new list</string>
    <string name="toolbar_shopping_list_rename">Renaming list</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_product_add">Adding new product</string>
    <string name="toolbar_product_rename">Renaming product</string>
    <string name="toolbar_login">Sign in</string>
    <string name="toolbar_friend_share">Share list with friends</string>
    
    <string name="menu_drawer_sign_out">You have been successfully signed out</string>

    <!--menu-->
    <string name="menu_rename_shopping_list">Rename</string>
    <string name="menu_delete_shopping_list">Delete</string>
    <string name="menu_share_shopping_list">Share</string>
    <string name="menu_copy_shopping_list">Copy</string>

    <!--submenu_shopping_list_settings-->
    <string name="submenu_shopping_list_settings_delete_all">Delete all shopping lists</string>

    <!--submenu_product_settings-->
    <string name="submenu_product_settings_delete_all">Delete all products</string>

    <!--submenu_friend_settings-->
    <string name="submenu_friend_settings_delete_all">Delete all friends</string>

    <!--fragment shopping list add-->
    <string name="fragment_shopping_list_add_list_name">List name</string>
    <string name="fragment_shopping_list_add_fail">Failed to create list</string>

    <!--fragment product add-->
    <string name="fragment_product_add_product_name">Product name</string>
    <string name="fragment_product_add_quantity">Quantity</string>
    <string name="fragment_product_add_unit">Unit</string>
    <string name="fragment_product_add_price">Price</string>
    <string name="fragment_product_add_notes">Notes</string>
    <string name="fragment_product_add">Add</string>

    <!--fragment login-->
    <!--<string name="fragment_login_title">Add</string>-->

    <!--fragment friend find-->
    <string name="fragment_friend_find_email">Email of friend</string>

    <!--Buttons-->
    <string name="button_rename">Rename</string>


    <!-- for settings -->
    <!--Preferences-->
    <string name="preference_section_general">General</string>
    <string name="preference_edit_currency">Currency</string>
    <string name="preference_dialog_edit_currency">Currency value</string>
    <string name="settings_text_size">Text Size</string>
    <string name="settings_default_value_currency">$</string>

    <string name="key_text_size" translatable="false">keyTextSize</string>
    <string name="key_currency" translatable="false">keyCurrency</string>
    <string name="key_token" translatable="false">keyToken</string>
    <string name="key_user_id" translatable="false">keyUserId</string>
    <!--SharedPreferences-->


    <!-- text size -->
    <string name="settings_text_small_label">Small</string>
    <string name="settings_text_medium_label">Medium</string>
    <string name="settings_text_moderate_label">Moderate</string>
    <string name="settings_text_large_label">Large</string>
    <string name="settings_text_extra_label">Extra Large</string>

    <!-- text size value-->
    <string name="settings_text_small_value">15</string>
    <string name="settings_text_medium_value">17</string>
    <string name="settings_text_moderate_value">20</string>
    <string name="settings_text_large_value">23</string>
    <string name="settings_text_extra_value">26</string>

    <!--Errors-->
    <string name="error_network_login">Login Failed. A network error occurred.</string>

    <!--Success-->
    <string name="success_login">Successfully logged in.</string>

    <!-- headers -->
    <string name="header_adapter_friend">Friends to share with:</string>
    <string name="header_adapter_friend_share">List shared with:</string>




</resources>
