<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_section_general">

        <EditTextPreference
            android:key="@string/key_currency"
            android:title="@string/preference_edit_currency"
            android:dialogTitle="@string/preference_dialog_edit_currency"
            android:defaultValue="@string/settings_default_value_currency"/>

        <ListPreference
            android:defaultValue="@string/settings_text_medium_value"
            android:entries="@array/text_size_label"
            android:entryValues="@array/text_size_value"
            android:key="@string/key_text_size"
            android:title="@string/settings_text_size"/>


    </PreferenceCategory>
</PreferenceScreen>