<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="viewModel" type="com.makaji.aleksej.listopia.ui.product.ProductViewModel"/>
        <variable name="product" type="com.makaji.aleksej.listopia.data.entity.Product"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="$"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/text_input_layout_notes"
                app:layout_constraintStart_toEndOf="@+id/image_price"
                app:layout_constraintTop_toTopOf="@+id/text_input_layout_price" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/listNameMaxLength"
                app:error="@{viewModel.errorTextListName}"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_name"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_product_add_product_name"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:text="@={product.name}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/editQuantityMax"
                app:error="@{viewModel.errorTextListName}"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:layout_constraintEnd_toStartOf="@+id/text_input_layout_unit"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@+id/image_quantity"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_name">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_product_add_quantity"
                    android:inputType="numberDecimal"
                    android:nextFocusDown="@+id/edit_unit"
                    android:text="@={product.quantity}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/editUnitMax"
                app:error="@{viewModel.errorTextListName}"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_input_layout_quantity"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_name">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_product_add_unit"
                    android:inputType="text"
                    android:text="@={product.unit}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/editPriceMax"
                app:error="@{viewModel.errorTextListName}"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_currency"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_quantity">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_product_add_price"
                    android:inputType="numberDecimal"
                    android:text="@={product.price}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/listNameMaxLength"
                app:error="@{viewModel.errorTextListName}"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_note"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_price">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_product_add_notes"
                    android:inputType="text"
                    android:text="@={product.notes}" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_create_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:onClick="@{() -> viewModel.onRenameProductClick(product)}"
                android:text="@string/button_rename"
                android:textColor="@color/accent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_notes" />

            <ImageView
                android:id="@+id/image_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/button_create_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_input_layout_notes"
                app:srcCompat="@drawable/ic_note" />

            <ImageView
                android:id="@+id/image_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/text_input_layout_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_name"
                app:srcCompat="@drawable/ic_quantity" />

            <ImageView
                android:id="@+id/image_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/text_input_layout_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_name" />

            <ImageView
                android:id="@+id/image_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/text_input_layout_notes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_input_layout_price"
                app:srcCompat="@drawable/ic_price" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</layout>